# secontrol

./: .agentmap.json  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  README.md.py  STRUCTURE_AFTER.md  VERIFY.md  apply_refactor.py  bp-contact-clone-offset.sbc  bp-contact-clone.sbc  fly_to_asteroid.py  fly_to_nearest_asteroid.py  nanodrill_scan_gps_skynet-agent2_Iron_20260606_195559.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_200124.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_201826.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_202643.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_202936.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_203819.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_203909.txt  nanodrill_scan_gps_skynet-agent2_Iron_20260606_203956.txt  opencode.json  pyproject.toml  repositories.yaml  setup.py  skynet-agent0-contact-clone-offset.projection-report.json  skynet-scout0-contact-clone-offset.projection-probe-report.json  skynet-scout0-contact-clone-offset.sbc  start_fleet_dashboard.bat  temp_aim_drill.py  temp_blocks.py  temp_check_drill.py  temp_check_surface.py  temp_drill_check.py  temp_drill_config.py  temp_drill_debug.py  (+9 more)
.claude/: settings.local.json
admins/: AGENTS.md
agent/: README.md  REPO_GUIDE.md
agentmap_reports/: broken-links-all.md
blueprints/: skynet-baza0-clone.sbc  skynet-baza0-raw.sbc  skynet-baza0-second-ship-shifted.sbc  skynet-baza0-second-ship.sbc  skynet-scout4-raw.sbc
commands/: README.md
docs/: API_REFERENCE.md  BASE_ANALYSIS.md  (+11 more)
(+594 files in other folders)
