[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secontrol"
dynamic = ["version"]
description = "Space Engineers Redis helper utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "secontrol contributors" }
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dependencies = [
  "redis>=4.5",
  "python-dotenv>=1.0"
]

[project.urls]
Homepage = "https://www.outenemy.ru/se"
Repository = "https://github.com/rootfabric/secontrol"
Issues = "https://github.com/rootfabric/secontrol/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build>=1.2",
  "twine>=4.0"
]
bridge = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.23"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "secontrol._version.__version__"}
